# MP5-audio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  capacitor.config.ts  netlify.toml  package.json  playwright.config.ts  playwright.hosted.config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json  vitest.config.ts
.github/: pull_request_template.md
docs/: AI_METADATA_SPEC.md  CURRENT_MP5_STATUS.md  GITHUB_RELEASE_v0.13.0-alpha.md  MP5C_BENCHMARK.md  MP5C_BLOCKER.md  MP5C_HISS_INVESTIGATION.md  MP5C_LIMITATIONS.md  MP5C_V5_STRATEGY.md  MP5H.md  MP5L.md  MP5_ADVANCED_FEATURES.md  MP5_ALBUM_PACKAGE.md  MP5_ALPHA_RELEASE_CHECKLIST.md  MP5_ALPHA_RELEASE_NOTES.md  MP5_BETA_READINESS.md  MP5_CHUNK_REGISTRY.md  MP5_CODEC_SPEC.md  MP5_COMPATIBILITY_POLICY.md  MP5_COMPATIBILITY_REPORT.md  MP5_CONTAINER_SPEC.md  MP5_CONTENT_WARNINGS.md  MP5_CONVERTER_PLAN.md  MP5_CREDITS_RIGHTS.md  MP5_DEMO_GUIDE.md  MP5_DEPLOYMENT_GUIDE.md  MP5_EMBEDDED_PACKAGE.md  MP5_FEATURE_MATRIX.md  MP5_FINGERPRINT_INTEGRITY.md  MP5_FORMAT_SPEC.md  MP5_HOSTED_DEMO.md  MP5_INSTALL_GUIDE.md  MP5_KNOWN_ISSUES.md  MP5_LIMITATIONS.md  MP5_MANUAL_QA_CHECKLIST.md  MP5_METADATA_SPEC.md  MP5_MOONSHOT_FEATURES.md  MP5_PLAYBACK_REGRESSION_CHECKLIST.md  MP5_PLAYBACK_TRANSPORT_AUDIT.md  MP5_PLAYER_PLAN.md  MP5_PUBLIC_BETA_RELEASE_NOTES.md  (+8 more)
e2e/: album-package.spec.ts  batch-album-builder.spec.ts  batch-converter.spec.ts  credits-rights.spec.ts  demo-guide.spec.ts  highlights.spec.ts  (+14 more)
rust/mp5-codec/: Cargo.toml
rust/mp5-codec/src/: lib.rs  pcm.rs
rust/mp5-codec/src/mp5c/: artifact.rs  bands.rs  bench.rs  blocker.rs  diag.rs  fixtures.rs  frame_v51.rs  mod.rs  pack.rs  pack_v5.rs  quant.rs
rust/mp5-codec/src/mp5h/: mod.rs  validate.rs
rust/mp5-codec/src/mp5l/: bitwriter.rs  block.rs  diag.rs  mod.rs  predict.rs  rice.rs  stereo.rs  varint.rs
(+356 files in other folders)
